Fixed JDK incompatible switch case